--- a/app/src/main/res/layout/fragment_now_weather.xml
+++ b/app/src/main/res/layout/fragment_now_weather.xml
@@ -17,18 +17,9 @@
             android:orientation="horizontal">
 
             <android.support.design.widget.TabLayout
+                android:id="@+id/tab_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-
-                <android.support.design.widget.TabItem
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="현재날씨" />
-
-                <android.support.design.widget.TabItem
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="주간 날씨"/>
 
             </android.support.design.widget.TabLayout>
 
