--- a/app/src/main/res/layout/activity_new.xml
+++ b/app/src/main/res/layout/activity_new.xml
@@ -6,13 +6,37 @@
     android:layout_height="match_parent"
     tools:context="com.lsb.lweather.NewActivity">
 
-    <fragment
-        android:id="@+id/frag2"
-        android:name="com.lsb.lweather.NowWeatherFragment"
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout="@layout/fragment_now_weather">
+        android:orientation="vertical">
 
-    </fragment>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tab_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </android.support.design.widget.TabLayout>
+
+        </LinearLayout>
+
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+        </android.support.v4.view.ViewPager>
+
+
+    </LinearLayout>
 
 </LinearLayout>
