--- a/app/src/main/res/layout/fragment_now.xml
+++ b/app/src/main/res/layout/fragment_now.xml
@@ -24,6 +24,7 @@
                 android:textSize="18sp" />
 
             <ImageView
+                android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:id="@+id/now_icon_frag"
                 android:layout_width="100dp"
