--- a/app/src/main/res/layout/activity_new.xml
+++ b/app/src/main/res/layout/activity_new.xml
@@ -6,37 +6,11 @@
     android:layout_height="match_parent"
     tools:context="com.lsb.lweather.NewActivity">
 
-
-    <LinearLayout
+    <fragment
+        android:id="@+id/frag2"
+        android:name="com.lsb.lweather.NowWeatherFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <android.support.design.widget.TabLayout
-                android:id="@+id/tab_layout"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-            </android.support.design.widget.TabLayout>
-
-        </LinearLayout>
-
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/view_pager"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-
-        </android.support.v4.view.ViewPager>
-
-
-    </LinearLayout>
+        tools:layout="@layout/fragment_now_weather"></fragment>
 
 </LinearLayout>
