--- a/app/src/main/res/layout/fragment_now.xml
+++ b/app/src/main/res/layout/fragment_now.xml
@@ -5,9 +5,9 @@
     tools:context="com.lsb.lweather.viewPage.fragment.NowFragment">
 
     <LinearLayout
-        android:layout_marginTop="32dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="32dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -20,20 +20,19 @@
                 android:id="@+id/now_city_name_frag"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="도시이름"
+                android:text=""
                 android:textSize="18sp" />
 
             <ImageView
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
                 android:id="@+id/now_icon_frag"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src="@mipmap/ic_launcher" />
+                android:layout_marginBottom="16dp"
+                android:layout_marginTop="16dp" />
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:orientation="horizontal"
@@ -41,8 +40,18 @@
 
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="24dp"
+                android:layout_marginRight="24dp"
+                android:layout_weight="1">
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <TextView
@@ -91,8 +100,9 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <TextView
@@ -100,7 +110,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:text="기온"
+                    android:text=""
                     android:textSize="18sp" />
 
                 <TextView
@@ -108,7 +118,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:text="최고기온"
+                    android:text=""
                     android:textSize="18sp" />
 
                 <TextView
@@ -116,7 +126,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:text="최저기온"
+                    android:text=""
                     android:textSize="18sp" />
 
                 <TextView
@@ -124,7 +134,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:text="습도"
+                    android:text=""
                     android:textSize="18sp" />
 
                 <TextView
@@ -132,7 +142,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:text="상태"
+                    android:text=""
                     android:textSize="18sp" />
 
                 <TextView
@@ -140,9 +150,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:text="국가"
+                    android:text=""
                     android:textSize="18sp" />
 
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+
+                android:layout_weight="1">
 
             </LinearLayout>
 
