--- a/app/src/main/res/layout/fragment_one_week.xml
+++ b/app/src/main/res/layout/fragment_one_week.xml
@@ -1,13 +1,16 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.lsb.lweather.viewPage.fragment.OneWeekFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/one_week_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        >
+    </ListView>
 
-</FrameLayout>
+
+</LinearLayout>
