--- a/app/src/main/res/layout/fragment_search_weather.xml
+++ b/app/src/main/res/layout/fragment_search_weather.xml
@@ -35,7 +35,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="search_button"
-                android:text="검 색" />
+                android:text="검 색"
+                tools:ignore="OnClick" />
         </LinearLayout>
 
 
