--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:id="@+id/container"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.lsb.lweather.MainActivity">
 
 
-    <fragment
-        android:name="com.lsb.lweather.SearchWeatherFragment"
-        android:id="@+id/frag"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout="@layout/fragment_search_weather">
-    </fragment>
+    <!--<fragment-->
+        <!--android:name="com.lsb.lweather.SearchWeatherFragment"-->
+        <!--android:id="@+id/frag"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--tools:layout="@layout/fragment_search_weather">-->
+    <!--</fragment>-->
 
 </LinearLayout>
