--- a/app/src/main/res/layout/fragment_search_weather.xml
+++ b/app/src/main/res/layout/fragment_search_weather.xml
@@ -4,50 +4,49 @@
     android:layout_height="match_parent"
     tools:context="com.lsb.lweather.SearchWeatherFragment">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-
-        <ImageView
-            android:id="@+id/image_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/search_edit_text"
-                android:layout_width="0dp"
+            <ImageView
+                android:id="@+id/image_view"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:hint="@string/area_fragment"
-                android:imeOptions="actionDone"
-                android:inputType="text" />
+                android:src="@mipmap/cloud3"/>
 
-            <Button
-                android:id="@+id/search_fragment_button"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:onClick="search_button"
-                android:text="검 색"
-                tools:ignore="OnClick" />
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/search_edit_text"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:hint="@string/area_fragment"
+                    android:imeOptions="actionDone"
+                    android:inputType="text" />
+
+                <Button
+                    android:id="@+id/search_fragment_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="search_button"
+                    android:text="검 색"
+                    tools:ignore="OnClick" />
+            </LinearLayout>
+
+
+            <ListView
+                android:id="@+id/list_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:divider="#7e7e7e"
+                android:dividerHeight="1dp"></ListView>
+
         </LinearLayout>
-
-
-        <ListView
-            android:id="@+id/list_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:divider="#7e7e7e"
-            android:dividerHeight="1dp"></ListView>
-
-    </LinearLayout>
 
 
 </FrameLayout>
